--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,40 @@ body {
 .faq-answer a {
 	@apply text-gray-600 underline font-medium;
 }
+
+.leaflet-container {
+	width: 100%;
+	height: 100%;
+}
+
+.price-marker {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.leaflet-popup-content p {
+	margin: 0 !important;
+}
+
+.leaflet-popup-content {
+	margin: 0 !important;
+}
+
+.leaflet-container a.leaflet-popup-close-button {
+	background: #fcf9f9 !important;
+	border-radius: 12px;
+	top: 5px !important;
+	right: 5px !important;
+}
+
+.react-multiple-carousel__arrow {
+	background: white !important;
+	min-width: 27px !important;
+	min-height: 27px !important;
+}
+
+.react-multiple-carousel__arrow::before {
+	color: black !important;
+	font-size: 12px !important;
+}
